<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>ear-codi</artifactId>
        <groupId>com.maxtorzito.test</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <groupId>com.maxtorzito.test</groupId>
    <artifactId>ear-codi-ear</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>ear</packaging>

    <name>ear-codi-ear</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.maxtorzito.test</groupId>
            <artifactId>ear-codi-web-one</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>war</type>
        </dependency>
    </dependencies>
        
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.openejb.maven</groupId>
                <artifactId>tomee-maven-plugin</artifactId>
                <version>1.6.0</version>
                <inherited>false</inherited>
                <configuration>
                    <tomeeVersion>1.6.0</tomeeVersion>
                    <tomeeHttpPort>8080</tomeeHttpPort>
                    <tomeeShutdownPort>8005</tomeeShutdownPort>
                    <tomeeClassifier>webprofile</tomeeClassifier>
                    <simpleLog>true</simpleLog>
                    <removeDefaultWebapps>true</removeDefaultWebapps>
                    <reloadOnUpdate>true</reloadOnUpdate>
                    <keepServerXmlAsthis>true</keepServerXmlAsthis>
                    <debug>false</debug>
                    <debugPort>5005</debugPort>
                    
                    <!--
                    <args>-Dmyenterpise-web.host=mymailing.com -Dmyenterpise-web-2.host=mymailing2.com -XX:MaxPermSize=256M -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled</args>
                    -->
                    
                    <apps>
                        <app>com.maxtorzito.test:ear-codi-ear:1.0-SNAPSHOT:ear</app>
                    </apps>
                </configuration>                
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-ear-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <version>6</version>
                    <defaultLibBundleDir>lib</defaultLibBundleDir>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>